<resources>
    <string name="app_name" translatable="false">ComikkuZ</string>
    <string name="settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_releases">Releases</string>
    <string name="menu_comics">Comics</string>
    <string name="menu_comics_detail">Comics detail</string>
    <string name="menu_comics_edit">Edit comics</string>
    <string name="menu_comics_save">Save comics</string>
    <string name="menu_comics_set_image">Set image</string>
    <string name="menu_comics_change_image">Change image</string>
    <string name="menu_comics_remove_image">Remove image</string>
    <string name="menu_releases_save">Save releases</string>
    <string name="menu_delete">Remove</string>
    <string name="menu_share">Share</string>
    <string name="menu_search_starshop">Search on Star Shop</string>
    <string name="menu_search_google">Search on Google</string>
    <string name="menu_search_amazon">Search on Amazon</string>
    <string name="menu_search_animeclick">Search on AnimeClick</string>
    <string name="menu_search_popstore">Search on PopStore</string>
    <string name="menu_search_mangayo">Search on MangaYo!</string>
    <string name="menu_delete_all">Remove all</string>
    <string name="menu_create">Create new</string>
    <string name="menu_purchase">Purchase</string>
    <string name="menu_ordered">Ordered</string>
    <string name="menu_goto_comics">Go to comics</string>
    <string name="menu_new_release">New release</string>
    <string name="menu_release_edit">Edit release</string>
    <string name="menu_import_backup">Import backup</string>
    <string name="menu_export_backup">Export backup</string>
    <string name="menu_release_menu">Release menu</string>
    <string name="menu_releases_update">Update</string>
    <string name="menu_comics_menu">Comics menu</string>
    <string name="swipe_purchase">Toggle purchase</string>
    <string name="swipe_order">Toggle order</string>
    <string name="title_settings">Settings</string>
    <string name="title_releases">Release list</string>
    <string name="title_new_releases">Updated release list</string>
    <string name="title_comics">Comics list</string>
    <string name="title_comics_selector">Comics selector</string>
    <string name="title_comics_detail">Comics detail</string>
    <string name="title_comics_edit">Edit comics</string>
    <string name="title_comics_create">Create comics</string>
    <string name="title_release_edit">Edit release</string>
    <string name="title_release_create">Create release</string>
    <string name="title_selected" translatable="false">%d</string>
    <string name="header_lost">Lost</string>
    <string name="header_current_period">This week</string>
    <string name="header_next_period">Next week</string>
    <string name="header_other">Other</string>
    <string name="header_missing">Missing</string>
    <string name="header_not_purchased">Not purchased</string>
    <string name="header_purchased">Purchased</string>
    <string name="header_new_releases">New releases</string>
    <string name="header_count" translatable="false">%d/%d</string>
    <string name="comics_name">Name</string>
    <string name="comics_publisher">Publisher</string>
    <string name="comics_authors">Authors</string>
    <string name="comics_series">Series</string>
    <string name="comics_price">Price</string>
    <string name="comics_periodicity">Periodicity</string>
    <string name="comics_notes">Notes</string>
    <string name="comics_follow">Follow</string>
    <string name="comics_unfollow">Unfollow</string>
    <string name="comics_following">Following</string>
    <string name="release_numbers">Number</string>
    <string name="release_numbers_helper">Single or intervals of numbers (eg: 1,4&#8211;6)</string>
    <string name="release_date">Date</string>
    <string name="release_price">Price</string>
    <string name="release_purchased">Purchased</string>
    <string name="release_ordered">Ordered</string>
    <string name="release_notes">Notes</string>
    <string-array name="comics_periodicity_keys">
        <item />
        <item>W1</item>
        <item>W2</item>
        <item>M1</item>
        <item>M2</item>
        <item>Y1</item>
    </string-array>
    <string-array name="comics_periodicity_entries">
        <item>None/irregular</item>
        <item>Weekly</item>
        <item>Every two weeks</item>
        <item>Monthly</item>
        <item>Every two months</item>
        <item>Annual</item>
    </string-array>
    <string name="release_last_none">Last: none</string>
    <string name="release_last">Last: #%d</string>
    <string name="release_last_dated">Last: #%d (%s)</string>
    <string name="release_next_none">Next: none</string>
    <string name="release_next">Next: #%d</string>
    <string name="release_next_dated">Next: #%d (%s)</string>
    <string name="release_missing">Missing: %d</string>
    <string name="release_last_update">Updated %s</string>
    <string name="comics_name_empty_error">Name cannot be empty</string>
    <string name="comics_name_notunique_error">Name already used</string>
    <string name="comics_saving_error">I couldn\'t save the comics! Please try again.</string>
    <string name="release_saving_error">I couldn\'t save the release! Please try again.</string>
    <string name="refresh_release_error">There was an error reading new releases</string>
    <string name="refresh_available_comics_error">There was an error reading available comics</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today_releases_channel_name">Today releases</string>
    <string name="today_releases_channel_description">Releases</string>
    <string name="notification_new_releases">New comics today</string>
    <string name="notification_new_release_detail">Today release: #%d</string>
    <string name="notification_new_release_detail_notes">Today release: #%d (%s)</string>
    <string name="notification_new_release_complete">%s: #%d</string>
    <plurals name="notification_new_releases_today">
        <item quantity="one">There is a new release today</item>
        <item quantity="other">There are %d new releases today</item>
    </plurals>
    <string name="notification_available_comics_loaded">Available comics loaded</string>
    <string name="notification_available_comics_loaded_zero">Sorry, there aren\'t comics available</string>
    <string name="auto_update_channel_name">Auto update</string>
    <string name="auto_update_channel_description">Auto update</string>
    <string name="auto_update_zero">No new releases</string>
    <string name="auto_update_zero_message">There are no new releases available, please try again later.</string>
    <string name="auto_update_available">New releases found</string>
    <plurals name="auto_update_available_message">
        <item quantity="one">There is a new release available.</item>
        <item quantity="other">There are %d new relelases available.</item>
    </plurals>
    <string name="auto_update_view">View</string>
    <plurals name="notification_auto_update">
        <item quantity="one">New release available</item>
        <item quantity="other">%d new relelases available</item>
    </plurals>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_general_header">General</string>
    <string name="settings_auto_update_enabled">Auto update</string>
    <string name="settings_notifications_header">Notifications</string>
    <string name="settings_notifications_enabled">Enabled</string>
    <string name="settings_notifications_settings">Notification settings</string>
    <string name="permission_camera_comics_denied">Need Camera permission</string>
    <string name="permission_camera_comics_title">Camera permission</string>
    <string name="permission_camera_comics_explanation">Camera permission is required to capture comics thumbnail.</string>
    <string name="permission_import_backup_read_denied">Need Read external storage permission</string>
    <string name="permission_import_backup_read_title">Read external storage permission</string>
    <string name="permission_import_backup_read_explanation">Read external storage permission is required to import backup data.</string>
    <string name="permission_export_backup_write_denied">Need Write external storage permission</string>
    <string name="permission_export_backup_write_title">Write external storage permission</string>
    <string name="permission_export_backup_write_explanation">Write external storage permission is required to export backup data.</string>
    <string name="confirm_delete_multi_release">Remove all %d releases?</string>
    <string name="comics_deleted">All data deleted</string>
    <plurals name="release_deleted">
        <item quantity="one">Release deleted</item>
        <item quantity="other">%d releases deleted</item>
    </plurals>
    <string name="share_chooser_title">Share</string>
    <string name="share_release" translatable="false">%s #%d (%s) %s</string>
    <string name="share_release_nodate" translatable="false">%s #%d %s</string>
    <string name="search_comics_hint">Search comics</string>
    <string name="load_available_comics">Load available comics</string>
    <string name="loading_available_comics">Loading available comics</string>
    <string name="comics_image">Comics image</string>
    <string name="menu_import_old_database">Import from old database</string>
    <string name="menu_clear_database">Clear database</string>
    <string name="confirm_content_description">confirmation layout image</string>
    <string name="comics_delete_error">There was an error while deleting data</string>
    <string name="backup_done">Backup done (%s)</string>
    <string name="backup_error">There was an error creating backup</string>
    <string name="import_old_database_error">There was an error importing data</string>
    <string name="restore_error">There was an error restoing backup</string>
    <string name="confirm_delete_comics_with_confirm_phrase">Please type %s to confirm deleting all data</string>
    <string name="confirm_title">Confirm</string>
    <string name="backup_title">Backup</string>
    <string name="exporting_backup">Exporting backup...</string>
    <string name="importing_old_database">Importing data from previous version...</string>
    <string name="import_old_database_connection_error">Import failed: cannot connect to the server</string>
    <string name="error">Error</string>
    <string name="import_old_database_success">%1$d comics imported from previous version, %2$d of which not linked.</string>
    <string name="import_old_database_success_with_date">%1$d comics imported from previous version, %2$d of which not linked.\n\nConsider updating CmkWeb with releases from %3$tB %3$tY and import again.</string>
    <string name="restore_success">%1$d comics restored from backup, %2$d of which not linked.</string>
    <string name="restore_success_with_date">%1$d comics restored from backup, %2$d of which not linked.\n\nConsider updating CmkWeb with releases from %3$tB %3$tY and import again.</string>
    <string name="menu_open_comics_selector">Select comics to follow</string>
    <string name="yes">Yes</string>
    <string name="no">No\n</string>
    <string name="need_refresh_available_comics_message">Download new available comics?</string>
    <string name="import_old_database_not_empty_error">Import failed: current database must be empty</string>
    <string name="import_old_database_source_not_found_error">Import failed: old database not found</string>
    <string name="restore_not_empty_error">Restore failed: current database must be empty</string>
    <string name="settings_about">About</string>
    <string name="settings_about_app_version">Version</string>
    <string name="settings_about_app_cmkweb_base_url">CmkWeb Service Base Url</string>
</resources>