<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/importOldDatabase"
        android:icon="@drawable/ic_import"
        android:orderInCategory="100"
        android:title="@string/menu_import_old_database"
        app:showAsAction="never" />

    <item
        android:id="@+id/importBackup"
        android:icon="@drawable/ic_import"
        android:orderInCategory="100"
        android:title="@string/menu_import_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/exportBackup"
        android:icon="@drawable/ic_export"
        android:orderInCategory="200"
        android:title="@string/menu_export_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/clearDatabase"
        android:icon="@drawable/ic_clear"
        android:orderInCategory="200"
        android:title="@string/menu_clear_database"
        app:showAsAction="never" />

</menu>