<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/saveComics"
        android:icon="@drawable/ic_check"
        android:title="@string/menu_comics_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/setImage"
        android:icon="@drawable/ic_image"
        android:title="@string/menu_comics_set_image"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/changeImage"
                android:icon="@drawable/ic_edit"
                android:title="@string/menu_comics_set_image" />

            <item
                android:id="@+id/removeImage"
                android:icon="@drawable/ic_delete"
                android:title="@string/menu_comics_remove_image" />
        </menu>

    </item>

</menu>