<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/releasesFragment">
    <fragment
        android:id="@+id/releasesFragment"
        android:name="it.amonshore.comikkua.ui.releases.ReleasesFragment"
        android:label="@string/title_releases"
        tools:layout="@layout/fragment_releases">
        <action
            android:id="@+id/action_dest_releases_to_dest_comics"
            app:destination="@id/comicsFragment" />
    </fragment>
    <fragment
        android:id="@+id/comicsFragment"
        android:name="it.amonshore.comikkua.ui.comics.ComicsFragment"
        android:label="@string/title_comics"
        tools:layout="@layout/fragment_comics">
        <action
            android:id="@+id/action_dest_comics_to_comicsDetailFragment"
            app:destination="@id/comicsDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/comicsDetailFragment"
        android:name="it.amonshore.comikkua.ui.comics.ComicsDetailFragment"
        android:label="@string/menu_comics_detail"
        tools:layout="@layout/fragment_comics_detail">
        <argument
            android:name="comicsId"
            android:defaultValue="0L"
            app:argType="long" />
        <action
            android:id="@+id/action_dest_comicsDetailFragment_to_comicsEditFragment"
            app:destination="@id/comicsEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/comicsEditFragment"
        android:name="it.amonshore.comikkua.ui.comics.ComicsEditFragment"
        android:label="@string/menu_comics_edit"
        tools:layout="@layout/fragment_comics_edit">
        <argument
            android:name="comicsId"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>
</navigation>